[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudequant"
version = "0.1.0"
description = "A-share quantitative trading platform powered by Claude Code"
authors = [{name = "ClaudeQuant Team"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["quant", "trading", "backtesting", "stock", "a-share"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tushare>=1.3.0",
    "akshare>=1.10.0",
    "TA-Lib>=0.4.0",
    "pandas-ta>=0.3.14b0",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.4.0",
    "matplotlib>=3.7.0",
    "click>=8.1.0",
    "rich>=13.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "requests>=2.28.0",
]

[project.scripts]
claudequant = "src.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
